# searxng-ai-kit

./: .gitignore  AGENTS.md  BUILD.md  MANIFEST.in  Makefile  README.cli.md  README.md  README.rst  build_searxng_wheel.py  clean.sh  dev-setup.py  entitlements.plist  generate_config.py  hello.py  pyproject.toml  pyproject.toml.template  requirements-dev.txt  requirements.txt  requirements.txt.template  searxng-cli.spec  searxng.spec  searxng_cli.py  searxng_cli.spec  searxng_cli_universal.spec  setup.py  test-macos-build.sh
.github/workflows/: build-and-release.yml  searxng-cli.yml
client/simple/: package-lock.json  package.json
examples/: library_usage.py
searxng/: README.md  __init__.py  client.py
searxng-2025.8.29+b8085d27a.dist-info/: METADATA  RECORD  entry_points.txt
