[project]
name = "searxng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel==2.17.0",
    "brotli==1.1.0",
    "certifi==2025.6.15",
    "fasttext-predict==0.9.2.4",
    "flask-babel==4.0.0",
    "flask==3.1.1",
    "httpx-socks[asyncio]==0.10.1",
    "httpx[http2]==0.28.1",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "msgspec==0.19.0",
    "pygments==2.19.2",
    "pyinstaller>=6.14.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "rich>=14.0.0",
    "setproctitle==1.3.6",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "typer-slim==0.16.0",
    "uvloop==0.21.0",
]

[tool.uv]
dev-dependencies = [
    "searxng",
]

[tool.uv.sources]
searxng = { workspace = true }
