[project]
name = "searxng-cli"
version = "0.1.0"
description = "Command-line interface for SearXNG privacy-respecting metasearch engine"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "babel==2.17.0",
    "brotli==1.1.0",
    "certifi==2025.6.15",
    "fastapi>=0.104.0",
    "fasttext-predict==0.9.2.4",
    "flask-babel==4.0.0",
    "flask==3.1.1",
    "httpx-socks[asyncio]==0.10.0",
    "httpx[http2]==0.28.1",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "mcp>=1.0.0",
    "msgspec==0.19.0",
    "pygments==2.19.1",
    "pyinstaller>=6.14.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "rich>=14.0.0",
    "setproctitle==1.3.6",
    "sse-starlette>=1.6.0",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "typer-slim==0.16.0",
    "uvicorn>=0.24.0",
    "uvloop==0.21.0",
]

[project.scripts]
searxng = "searxng_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["searx*"]

[tool.setuptools]
py-modules = ["searxng_cli"]

[tool.setuptools.package-data]
searx = [
    "settings.yml",
    "*.toml",
    "*.msg",
    "search/checker/scheduler.lua",
    "data/*.json",
    "data/*.txt",
    "data/*.ftz",
    "favicons/*.toml",
    "infopage/*/*",
    "static/themes/simple/css/*",
    "static/themes/simple/css/*/*",
    "static/themes/simple/img/*",
    "static/themes/simple/js/*",
    "static/themes/simple/*.json",
    "templates/*/*",
    "templates/*/*/*",
    "translations/*",
    "translations/*/*",
    "translations/*/*/*",
]

[tool.uv]
dev-dependencies = []