[project]
name = "searxng-ai-kit"
version = "0.1.0"
description = "AI-powered search toolkit: CLI, Python library, and MCP server for intelligent research"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "SearXNG AI Kit Contributors"}
]
license = {text = "AGPL-3.0"}
keywords = ["search", "privacy", "metasearch", "searxng", "ai", "llm", "cli", "library", "mcp", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.104.0",
    "litellm>=1.0.0",
    "mcp>=1.0.0",
    "rich>=14.0.0",
    "sse-starlette>=1.6.0",
    "typer-slim==0.16.0",
    "uvicorn>=0.24.0",
    # All SearXNG dependencies for compatibility
    "babel==2.17.0",
    "brotli==1.1.0",
    "certifi==2025.6.15",
    "fasttext-predict==0.9.2.4",
    "flask-babel==4.0.0",
    "flask==3.1.1",
    "httpx-socks[asyncio]==0.10.0",
    "httpx[http2]==0.28.1",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "msgspec==0.19.0",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "setproctitle==1.3.6",
    "toml>=0.10.2",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "uvloop==0.21.0",
    "build>=1.2.2.post1",
]

[project.scripts]
searxng = "searxng_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

# Note: Dependencies are managed in setup.py for custom installation handling

[tool.setuptools.packages.find]
include = ["searxng*"]

[tool.setuptools]
py-modules = ["searxng_cli"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "pyinstaller>=6.14.1",
]
